<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidStorage</string>
    <string name="action_settings">Settings</string>
    <string name="shared_preferences">Shared Preferences</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="external_storage">External Storage</string>
    <string name="sqlite_database">SQLite Database</string>
    <string name="android_backup_service">Android Backup Service</string>
    <string name="title_activity_shared_preferences">SharedPreferences</string>
    <string name="about_me">About Me</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="hobbies">Hobbies</string>
    <string name="coding">Coding</string>
    <string name="writing">Writing</string>
    <string name="jogging">Jogging</string>
    <string name="zodiac">Zodiac</string>
    <string name="save_me">Save Me</string>
    <string name="retrieve">Get Me</string>
    <string name="title_activity_internal_storage">InternalStorage</string>
    <string name="title_activity_external_storage">ExternalStorage</string>
    <string name="title_activity_sqlite">SQLiteActivity</string>
    <string name="title_activity_shared">SharedActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_webservice">WebserviceActivity</string>
    <string name="fahrenheit_to_celsius">Fahrenheit to Celsius</string>
    <string name="degree_fahrenheit">°F</string>
    <string name="celsius">°C</string>
    <string name="convert">Convert...</string>
    <string name="web_service">Web Service</string>

    <string-array name="zodiac">
        <item>Aries</item>
        <item>Taurus</item>
        <item>Gemini</item>
        <item>Cancer</item>
        <item>Leo</item>
        <item>Virgo</item>
        <item>Libra</item>
        <item>Scorpio</item>
        <item>Sagittarius</item>
        <item>Capricorn</item>
        <item>Aquarius</item>
        <item>Pisces</item>
    </string-array>

</resources>
